Fixes build order

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -11,6 +11,7 @@ TODO
     Иногда рабочие тупо стоят без дела
     При обороне мейна Зергу выгоднее не стоять в проходе а пропускать к себе врагов по одному и месить кучей на базе
     Если юниты долго топчутся на месте, то лучше закопать
+    Чтобы юниты расступались если своим надо пройти
     
 Сквады
     Дроп на мейн
