Fixes burrow bug (again), build order and defence fixes

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -7,11 +7,14 @@ TODO
     Муталиск
     Оверлорд (режим поддержки войск; транспорт)
 	Если оверлорд мотается детектором войск, он забивает на скаутинг
-	Если оверлорда месят, не отползать чуть чуть — улетать далеко
+	Если оверлорда атакуют - улетать на ближайшую базу
+	
     Иногда рабочие тупо стоят без дела
     При обороне мейна Зергу выгоднее не стоять в проходе а пропускать к себе врагов по одному и месить кучей на базе
     Если юниты долго топчутся на месте, то лучше закопать
     Чтобы юниты расступались если своим надо пройти
+    Закапывать юниты лучше разрозненно, чтобы их не месили сплешем и заклинаниями
+    Рассредотачивать юниты по карте, организовывать отдельные группы, а не только на чок
     
 Сквады
     Дроп на мейн
