Build order fixes,  defence conditions

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -8,6 +8,7 @@ TODO
     Оверлорд (режим поддержки войск; транспорт)
 	Если оверлорд мотается детектором войск, он забивает на скаутинг
 	Если оверлорда атакуют - улетать на ближайшую базу
+    Зерлинги должны преимущественно нападать кучей на одного. Не допускать растягивания цепочки
 	
     Иногда рабочие тупо стоят без дела
     При обороне мейна Зергу выгоднее не стоять в проходе а пропускать к себе врагов по одному и месить кучей на базе
