--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -38,5 +38,5 @@ TODO
 Разное
     Строит непропорционально много оверлордов
     Тормозит с армией
-    
+    После разрушения экспы строит заново, но забывает про экстрактор
     
