More global fixes

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -17,6 +17,9 @@ TODO
     Закапывать юниты лучше разрозненно, чтобы их не месили сплешем и заклинаниями
     Рассредотачивать юниты по карте, организовывать отдельные группы, а не только на чок
     
+    Если войны нет, но в области видимости есть парочка вражеских юнитов, 
+    то можно наслать на них королеву. Ну там паразита навесить или еще каких брудлингов
+    
 Сквады
     Дроп на мейн
     
